<resources>
    <string name="diario">Diario</string>
    <string name="scrivi">Vai in..</string>
    <string name="annulla">Annulla</string>
    <string name="aggiungi">Aggiungi..</string>
    <string name="immagine">Immagine</string>
    <string name="testo">Testo</string>
    <string name="audio">Audio</string>
    <string name="app_name">Diario</string>
    <string name="data_oggi">Oggi</string>
    <string name="altra_data">Scegli La Data</string>
    <string name="impostazioni">impostazioni</string>
    <string name="sicurezza">SICUREZZA</string>
    <string name="password">Proteggi il Diario con una Password</string>
    <string name="title_activity_foto" translatable="false">FotoActivity</string>
    <string name="title_activity_testo_" translatable="false">Testo_Activity</string>
    <string name="activiy_password" translatable="false">Password_Activity</string>
    <string name="scegli_sfondo">Scegli il tuo Sfondo</string>
    <string name="emotion">Aggiungi una Emoticons</string>
    <string name="elimina">Elimina</string>
    <string name="categoria">Seleziona una Categoria</string>
    <string name="applica">Applicare lo sfondo selezionato</string>
    <string name="pag_corrente">Solo alla pagina corrente</string>
    <string name="pag_tutte">Tutte le pagine</string>
    <string name="aggi_emot">Aggiungi emoticon selezzionato.</string>
    <string name="elim_emot">Elimina emoticon</string>
    <string name="altro">Altro</string>
    <string name="famiglia">Famiglia</string>
    <string name="amici">Amici</string>
    <string name="amore">Amore</string>
    <string name="studio">Studio</string>
    <string name="lavoro">Lavoro</string>
    <string name="attivita">Attività</string>
    <string name="hobby">Hobby</string>
    <string name="idee">Idee</string>
    <string name="vacanza">Vacanza</string>
    <string name="festa">Festa</string>
    <string name="applica_cat">Applica categoria selezionata</string>
    <string name="click_banner">Fai Click sul Banner </string>
    <string name="torna_conferma">Poi Torna Indietro per Confermare</string>
    <string name="ad_err">- Offline o AdBlock Attivo -</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8361211670031398/3340774067</string>
    <string name="oggi">Oggi</string>
    <string name="agenda">Agenda</string>
    <string name="titolo">Titolo</string>
    <string name="errore">Errore</string>
    <string name="agendiario">AgenDiario</string>
    <string name="mese_corrente">Mese Corrente</string>
    <string name="xcategoria">Categoria</string>
    <string name="vecchi_prima">Vecchi prima</string>
    <string name="nuovi_prima">Nuovi prima</string>
    <string name="diario_agenda">Diario + Agenda</string>
    <string name="solo_diario">solo Diario</string>
    <string name="la_foto">La foto è stata scattata il:\n</string>
    <string name="usa_la_data">Usa la data della foto ?</string>
    <string name="set_notifica">Imposta Promemoria..</string>
    <string name="ore">Alle ore</string>
    <string name="scrivi_testo">Scrivi il tuo testo</string>
    <string name="cerca">Cerca..</string>
    <string name="tratto">Tratto</string>
    <string name="opacita">Opacita</string>
    <string name="saturazione">saturazione</string>
    <string name="riempimento">Riempimento</string>
    <string name="video">Video</string>
    <string name="disegno">Disegno</string>
    <string name="benvenuto">BENVENUTO</string>
    <string name="per_iniziare">Per Iniziare Aggiungi una Pagina </string>
    <string name="modifica">Modifica</string>
    <string name="cancellare">vuoi eliminare</string>
    <string name="cotagoccie">Modalità Contagoccie</string>
    <string name="impassword">Imposta la Password</string>
    <string name="dispassword">Diabilita la Password</string>
    <string name="aggpass">Aggiungi una Password</string>
    <string name="modpass">Modifica la Password</string>
    <string name="passprot">La Password protegge il diario dalla modifica e visualizzazione altrui</string>
    <string name="inserire_una_password">Inserire una nuova Password</string>
    <string name="conferma_la_password">Conferma la Password</string>
    <string name="errore_password">Password non corrispondente</string>
    <string name="digita_la_password">Digita la Password corrente</string>
    <string name="password_dimenticata">Password dimenticata ?</string>
    <string name="inserisci_una_domanda">Inserisci una domanda e una risposta per resettare la password se dimenticata</string>
    <string name="risposta">Risposta</string>
    <string name="per_resettare">Per resettare rispondi</string>
    <string name="domanda">Domanda</string>
    <string name="risposta_vuota">Risposta vuota</string>
    <string name="password_vuota">Password vuota</string>
    <string name="password_salvata">Password salvata</string>
    <string name="resettato">resettato con sucesso</string>
    <string name="esegui_backup">Esegui il Backup del Diario su SD</string>
    <string name="dati">DATI</string>
    <string name="ripristina_backup">Ripristina l\'ultimo Backup da SD</string>
    <string name="giornalmente">Giornalmente</string>
    <string name="mensilmente">Mensilmente</string>
    <string name="settimanalmente">Settimanalmente</string>
    <string name="backup_automatico">Backup automatico</string>
    <string name="imposta_la_frequenza_di_backup">Imposta la frequenza di backup</string>
    <string name="numero_massimo_di_backup_memorizzati">Numero massimo di Backup memorizzati</string>
    <string name="avvia_backup">Avvia Backup</string>
    <string name="esegui">Esegui</string>
    <string name="backup_eseguito">Backup eseguito</string>
    <string name="scegli_il_backup_da_ripristinare">Scegli il Backup da ripristinare</string>
    <string name="action_settings">setting</string>
    <string name="riprova">riprova</string>
    <string name="notifica_on">Notifica ON</string>
    <string name="notifica_off">Notifica OFF</string>
    <string name="notifica_non">Notifica non Attivabile</string>
    <string name="dimensione_del_testo">Dimensione del testo</string>
    <string name="colore_testo">Colore</string>
    <string name="carattere">Carattere</string>
    <string name="cornice">Cornice</string>
    <string name="grassetto">Grassetto</string>
    <string name="disconnetti">Disconnetti</string>
    <string name="connetti">connetti</string>
    <string name="salva_i_dati">Salva i Dati su Google Drive</string>
    <string name="ripristino">Ripristino</string>
    <string name="db_path" translatable="false">data/data/com.agenda.diario/databases/database_diario.db</string>
    <string name="solo_agenda">Solo Agenda</string>
    <string name="insieme">Insieme</string>
    <string name="benvenuto_in_diario_agenda">Benvenuto in Diario Agenda</string>
    <string name="crea_il_tuo_diario_aggiungi_testo_foto_video_musica_disegno">Crea il tuo diario aggiungi Testo Foto Video Musica Disegno ...</string>
    <string name="segna_in_agenda">Segna in Agenda un Promemoria con una Notifica</string>
    <string name="disegna_una_nota_e_salvala_sul_diario">Disegna una Nota e salvala sul Diario</string>
    <string name="crea_backup_e_sincronizza_in_google_drive">Crea Backup e Sincronizza in Google Drive</string>
    <string name="errore_connessione">Errore Connessione</string>


</resources>
