<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioGroup
        android:id="@+id/radiogrup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioaltro"
            android:text="@string/altro"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginTop="5dp"
            />
        <RadioButton
            android:id="@+id/radiofamiglia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginTop="5dp"
            android:text="@string/famiglia"/>
        <RadioButton
            android:id="@+id/radioamici"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginTop="5dp"
            android:text="@string/amici"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radiostudio"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginTop="5dp"
            android:text="@string/studio"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioamore"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginTop="5dp"
            android:text="@string/amore"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radiolavoro"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginTop="5dp"
            android:text="@string/lavoro"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioattivita"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginTop="5dp"
            android:text="@string/attivita"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radiohobby"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginTop="5dp"
            android:text="@string/hobby"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioidee"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginTop="5dp"
            android:text="@string/idee"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radiovacanza"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginTop="5dp"
            android:text="@string/vacanza"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radiofesta"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginTop="5dp"
            android:text="@string/festa"/>
    </RadioGroup>

</RelativeLayout>