<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diario"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:id="@+id/textView" />
    <RadioGroup
        android:id="@+id/radiofiltro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp">


        <RadioButton
            android:id="@+id/rdiar_mese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mese_corrente"

            />
        <RadioButton
            android:id="@+id/rdiar_vecchi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vecchi_prima"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/rdiar_nuovi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuovi_prima"/>
        <RadioButton
            android:id="@+id/rdiar_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xcategoria"
            />


    </RadioGroup>

    <Spinner
        android:id="@+id/spincat"
        android:layout_width="100dp"
        android:layout_height="wrap_content"

        android:layout_alignTop="@+id/radiofiltro"
        android:layout_toRightOf="@+id/radiofiltro"
        android:layout_toEndOf="@+id/radiofiltro"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp">

    </Spinner>
<TextView
    android:id="@+id/textview2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/diario_agenda"
    android:layout_below="@+id/radiofiltro"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="25dp"
    android:layout_marginStart="25dp"/>
    <RadioGroup
        android:id="@+id/radiofiltro_di_ag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview2"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp">
        <RadioButton
            android:id="@+id/rad_di"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solo_diario"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/rad_ag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solo_agenda"
            />
        <RadioButton
            android:id="@+id/rad_di_ag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insieme"

            />
    </RadioGroup>


</RelativeLayout>