<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="300dp">
    <TextView
        android:id="@+id/textbann1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_banner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>


    <com.google.android.gms.ads.AdView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_below="@+id/textbann1"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="#9e9e9e"
        >

    </com.google.android.gms.ads.AdView>
    <TextView
        android:id="@+id/texterr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textbann1"
        android:layout_marginTop="45dp"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:text="@string/ad_err"/>
    <TextView
        android:id="@+id/textbann2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/torna_conferma"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/banner"/>
    <Button
        android:id="@+id/buttann"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annulla"
        android:textColor="#FF009688"
        android:textSize="16sp"
        android:background="@drawable/clik"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"/>
</RelativeLayout>