<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >




    <TextView
        android:id="@+id/texpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passprot"
        android:textSize="18sp"
        android:textColor="#212121"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/editinspass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texpass"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/inserire_una_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:focusableInTouchMode="true"
        android:textSize="16sp"
         />

    <EditText
        android:id="@+id/editrepass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editinspass"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/conferma_la_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:focusableInTouchMode="true"/>
    <TextView
        android:id="@+id/textdim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editrepass"
        android:text="@string/inserisci_una_domanda"
        android:textSize="18sp"
        android:textColor="#212121"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/editdomanda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textdim"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/domanda"
        android:focusableInTouchMode="true"/>
    <EditText
        android:id="@+id/editrisposta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editdomanda"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/risposta"
        android:focusableInTouchMode="true"/>
    <Button
        android:id="@+id/butpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@+id/editrisposta"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:textColor="#4db6ac"
        android:text="OK"/>

<FrameLayout
    android:id="@+id/snackbarpos"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_alignParentTop="true">

</FrameLayout>
</RelativeLayout>



