<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scrivi"
        android:textSize="20sp"
        android:id="@+id/textVtitolo"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/diario"
        android:id="@+id/textVdiar"
        android:textSize="20sp"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/textVtitolo"
        android:layout_alignLeft="@+id/textVtitolo"
        android:layout_alignStart="@+id/textVtitolo" />
    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/agenda"
        android:id="@+id/textVage"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textVdiar"
        android:layout_alignLeft="@+id/textVdiar"
        android:layout_alignStart="@+id/textVdiar" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/annulla"
        android:textColor="#448aff"
        android:id="@+id/textVann"
        android:layout_below="@+id/textVage"
        android:layout_marginTop="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>