<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textmodpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modpass"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:textColor="#212121"/>
    <EditText
        android:id="@+id/editmodpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textmodpass"
        android:layout_margin="25dp"
        android:hint="@string/digita_la_password"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:gravity="center"/>

    <Button
        android:id="@+id/butmodpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="OK"
        android:textColor="#4db6ac"
        android:layout_below="@+id/editmodpass"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"/>
    <Button
        android:id="@+id/butannpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/annulla"
        android:textColor="#4db6ac"
        android:layout_below="@+id/editmodpass"
        android:layout_toLeftOf="@+id/butmodpass"
        android:layout_margin="15dp"/>
</RelativeLayout>