<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aggiungi"
        android:textSize="20sp"
        android:id="@+id/textdiaagg"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />
    <ImageView
        android:id="@+id/imadiaima"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textdiaagg"
        android:layout_alignLeft="@+id/textdiaagg"
        android:layout_alignStart="@+id/textdiaagg"
        app:srcCompat="@drawable/ic_image_grey600_24dp"
        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/immagine"
        android:id="@+id/textdiaimag"
        android:textSize="20sp"
        android:paddingRight="35dp"
        android:paddingLeft="35dp"
        android:paddingStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textdiaagg"
        android:layout_alignLeft="@+id/textdiaagg"
        android:layout_alignStart="@+id/textdiaagg" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textdiaimag"
        android:layout_alignLeft="@+id/textdiaimag"
        android:layout_alignStart="@+id/textdiaimag"
        app:srcCompat="@drawable/ic_file_video_grey600_24dp"/>
    <TextView
        android:id="@+id/textdiavideo"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/video"
        android:textSize="20sp"
        android:paddingRight="35dp"
        android:paddingLeft="35dp"
        android:paddingStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textdiaimag"
        android:layout_alignLeft="@+id/textdiaimag"
        android:layout_alignStart="@+id/textdiaimag"
        />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textdiavideo"
        android:layout_alignLeft="@+id/textdiavideo"
        android:layout_alignStart="@+id/textdiavideo"
        app:srcCompat="@drawable/painting"/>
    <TextView
        android:id="@+id/textdiadisegno"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/disegno"
        android:textSize="20sp"
        android:paddingRight="35dp"
        android:paddingLeft="35dp"
        android:paddingStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textdiavideo"
        android:layout_alignLeft="@+id/textdiavideo"
        android:layout_alignStart="@+id/textdiavideo"
        />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textdiadisegno"
        android:layout_alignLeft="@+id/textdiadisegno"
        android:layout_alignStart="@+id/textdiadisegno"
        app:srcCompat="@drawable/ic_tooltip_text_grey600_24dp"
        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/testo"
        android:id="@+id/textdiatesto"
        android:textSize="20sp"
        android:paddingRight="35dp"
        android:paddingLeft="35dp"
        android:paddingStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textdiadisegno"
        android:layout_alignLeft="@+id/textdiadisegno"
        android:layout_alignStart="@+id/textdiadisegno" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/ic_file_music_grey600_24dp"
        android:layout_below="@+id/textdiatesto"
        android:layout_alignLeft="@+id/textdiatesto"
        android:layout_alignStart="@+id/textdiatesto"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/audio"
        android:id="@+id/textdiaaudio"
        android:textSize="20sp"
        android:paddingRight="35dp"
        android:paddingLeft="35dp"
        android:paddingStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textdiatesto"
        android:layout_alignLeft="@+id/textdiatesto"
        android:layout_alignStart="@+id/textdiatesto"
        />
    <ImageView

        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ic_microphone_grey600_24dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textdiaaudio"
        android:layout_alignLeft="@+id/textdiaaudio"
        android:layout_alignStart="@+id/textdiaaudio"
        />

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="Registra"
        android:id="@+id/textdiarecord"
        android:textSize="20sp"
        android:paddingRight="35dp"
        android:paddingLeft="35dp"
        android:paddingStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textdiaaudio"
        android:layout_alignLeft="@+id/textdiaaudio"
        android:layout_alignStart="@+id/textdiaaudio"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/annulla"
        android:textColor="#448aff"
        android:id="@+id/textdiaann"
        android:layout_below="@+id/textdiarecord"

        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>